--- a/index.html
+++ b/index.html
@@ -21,30 +21,31 @@
             Plots
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="MaxTempPage.html">Max Temperature</a>
-            <a class="dropdown-item" href="HumidityPage.html">Humidity</a>
-            <a class="dropdown-item" href="CloudinessPage.html">Cloudiness</a>
-            <a class="dropdown-item" href="WindSpeedPage.html">Wind Speed</a>            
-
+            <a class="dropdown-item" href="1_MaxTempPage.html">Max Temperature</a>
+            <a class="dropdown-item" href="2_HumidityPage.html">Humidity</a>
+            <a class="dropdown-item" href="3_CloudinessPage.html">Cloudiness</a>
+            <a class="dropdown-item" href="4_WindSpeedPage.html">Wind Speed</a>            
           </div>
-        </li>
-        <li class="nav-item active">
-            <a class="nav-link" href="comparisons-page.html">Comparison <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link" href="comparisons.html">Comparison</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="cities_dataframe.html">Data</a>
+            <a class="nav-link" href="data.html">Data</a>
           </li>
-      </ul>
-    </div>
-  </nav>
+
+        </ul>
+      </div>
+    </nav>
+  </div>
+  <!-- Content Section -->
   <div class="container">
     <div class="row">
-      <div class="col-lg-7 col-md-12">
-        <!-- Left box  -->
+      <div class="col-lg-8 col-md-12"
+        <!-- Large box  -->
         <div class="box">
           <h3 class="title">Summary: Latitude vs. X</h3>
           <hr>
-          <img src="Assets/temperaturemap.png" class="vizualization rounded float-left" alt="Max Temperature">
+          <img src="assets/temperaturemap.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
           <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To
             accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over
             500 cities.</p>
@@ -54,8 +55,57 @@
             any trends and correlations witnessed.</p>
         </div>
       </div>
-      <div class="col-lg-5 col-md-12">
-        <!-- Right Box -->
+      <div class="col-lg-4 col-md-12">
+        <!-- Small Box -->
         <div class="box">
           <h5 class="title">Visualizations</h5>
           <hr>
+
+          <div class="container">
+            <div class="row" style="padding-bottom: 30px;">
+              <div class="col-6">
+                <a href="1_MaxTempPage.html">
+                  <img class="panel" src="assets/temperaturemap.png" alt="Max Temperature">
+                </a>
+              </div>
+              <div class="col-6">
+                <a href="2_HumidityPage.html">
+                  <img class="panel" src="assets/humiditymap.png" alt="Humidity">
+                </a>
+              </div>
+            </div>
+
+            <div class="row" style="padding-bottom: 30px;">
+              <div class="col-6">
+                <a href="3_CloudinessPage.html">
+                  <img class="panel active" src="assets/cloudymap.png" alt="Cloudiness">
+                </a>
+              </div>
+              <div class="col-6">
+                <a href="4_WindSpeedPage.html">
+                  <img class="panel" src="assets/windmap.png" alt="Wind Speed">
+                </a>
+              </div>
+
+
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+  </div>
+ 
+
+  <!-- Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+
+</body>
+
+</html>
