--- a/1_MaxTempPage.html
+++ b/1_MaxTempPage.html
@@ -45,7 +45,7 @@
               <h3 class="title">Max Temperature</h3>
               <hr>
               <img src="assets/temperaturemap.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
-              <p>As expected, the weather becomes significantaly warmer as one approaches the equator (Zero Degrees Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of the year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered</p>
+              <p>As expected, the weather becomes significantaly warmer as one approaches the equator (zero degrees latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of the year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-12">
