--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand latitude-color" href="index.html"><strong>Latitude</strong></a>
-    <button class="navbar-toggler" style = "background-color: lightseagreen" type ="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler button_color" style = "background-color: lightseagreen" type ="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse navbar-color" id="navbarSupportedContent">
