--- a/3_CloudinessPage.html
+++ b/3_CloudinessPage.html
@@ -9,7 +9,7 @@
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand latitude-color" href="index.html"><strong>Latitude</strong></a>
+    <a class="navigation" href="index.html"><strong>Latitude</strong></a>
     <button class="navbar-toggler button_color" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
