--- a/Comparisons.html
+++ b/Comparisons.html
@@ -36,17 +36,17 @@
       </div>
     </nav>
 
-    <div class="container content bg-white">
-        <h3>Comparison: Latitude vs X</h3>
+    <div class="container">
+        <h3 class = "title">Comparison: Latitude vs X</h3>
         <hr>
         <p>Click any plot to get an indepth analysis</p>
         <div class="row">
             <div class="col-md-6">
-                <h3 class="text-center">vs. Max Teperature</h3>
+                <h3 class="title">vs. Max Teperature</h3>
                 <a href="1_MaxTempPage.html"><img width="100%" src="Assets/temperaturemap.png"></a>   
             </div>
             <div class="col-md-6">
-                <h3 class="text-center">vs. Humidity</h3>
+                <h3 class="title">vs. Humidity</h3>
                 <a href="2_HumidityPage.html"><img width="100%" src="Assets/humiditymap.png"></a>  
             </div>
         </div>
@@ -54,11 +54,11 @@
         <br>
         <div class="row">
             <div class="col-md-6">
-                <h3 class="text-center">vs. Cloudiness </h3>
+                <h3 class="title">vs. Cloudiness </h3>
                 <a href="3_CloudinessPage.html"><img width="100%" src="Assets/cloudymap.png"></a>   
             </div>
             <div class="col-md-6">
-                <h3 class="text-center">vs. Wind Speed</h3>
+                <h3 class="title">vs. Wind Speed</h3>
                 <a href="4_WindSpeedPage.html"><img width="100%" src="Assets/windmap.png"></a>  
             </div>
         </div>   
