data page complete

--- a/4_WindSpeedPage.html
+++ b/4_WindSpeedPage.html
@@ -45,7 +45,11 @@
               <h3 class="title">Wind Speed</h3>
               <hr>
               <img src="assets/windmap.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
-              <p>As expected, the weather becomes significantaly warmer as one approaches the equator (zero degrees latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of the year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered.</p>
+              <p>Latitude and Wind Speed are not correlated. If the question is ask, "Can one predict the average wind speed of a city based solely on the latitude of the city?" the answer quite simply is "No"</p>
+            <br>
+            <br>
+            <br>
+            <br>
             </div>
           </div>
           <div class="col-lg-4 col-md-12">
